new version with zielsetzung

--- a/t08_txt.tex
+++ b/t08_txt.tex
@@ -121,10 +121,10 @@ Weitere Ergebnisse der Messung von Google zeigen, dass die meisten Verluste in d
 \label{googleImage}
 \end{figure}
 \section{Zielsetzung - Zieldefinition 1RTT}
-Das Ziel, worauf wir in dieser Arbeit hinarbeiten wollen soll sich am Ideal von einer Retransmission Time orientieren. Dies bedeutet, dass bei einem Paketverlust nur eine erneute Übertragung notwendig ist. Die Web Latenz soll sich dann auf eine RTT abgeschlossen sein. 
+Das Ziel, worauf wir in dieser Arbeit hinarbeiten wollen soll sich am Ideal von einer Latenz von einem Retransmission Timeout orientieren. Dies bedeutet, bei einem Paketverlust innerhalb einer Zeit von einem Retransmission Timeout die erneute Übertragung zu beenden. In der Praxis müssen wir weitere Aspekte als die Zeit der Übertragung betrachten. Ein wichtiger Faktor ist das Routing. Wenn ein Paket auf einem Pfad schon verloren gegangen ist, so ist die Wahrscheinlichkeit, dass bei einer erneuten Übertragung das Paket wieder verloren geht sehr hoch. Die Gründe hierfür liegen in einem toten Pfad oder in einem Timeout bei der Übertragung von einem Knoten zum nächsten. Aus diesem Grund ist das Ziel eine Latenz von einem Retransmission Timeout mit Vorsicht zu betrachten.  Dieses Ziel ist ein Ideal und wird in der Praxis nicht dauerhaft umsetzbar sein. In dieser Arbeit wollen wir Lösungen finden, wie wir möglichst nahe an dieses Ziel herankommen. Wir wollen die drei Aspekte untersuchen und sie auf ihre praktische Einsetzbarkeit hin untersuchen.
 
 \section{Lösungsvarianten}
-Nachdem unser Ziel definiert wurde, kümmern wir uns um die Wege, wie wir das Ziel Paket-Recovery innerhalb einer RTT. Hierzu wurden im Paper \cite{} die drei Ansätze \textit{Reactive}, \textit{Corrective} und \textit{Proactive} vorgestellt. Der \textit{Reactive} beugt dem Problem des nicht erhaltenen ACKs vor indem es mehrere ACK Pakete zum Empfänger schickt. Somit ist die Wahrscheinlichkeit höher, dass der Empfänger eines dieser Pakete erhält und damit bestätigen kann. Der Corrective Ansatz versendet direkt mehrere Pakete. Durch diese Redundanz soll sichergestellt werden, dass die Pakete bei Verlust im Notfall beim Empfänger aus den vorhandenen Informationen wiederhergestellt werden. Die Proactive Lösung geht den krassesten Weg und versendet zu 100 Prozent redundant seine Daten. Somit wird das Paket doppelt aufgebläht. Wie die drei Ansätze im Detail funktionieren, wird in den folgenden Abschnitten behandelt.
+Nachdem unser Ziel definiert wurde, kümmern wir uns um die Wege, wie wir das Ziel Paket-Recovery innerhalb einer RTT erreichen wollen. Hierzu gibt es im Paper \cite{} die drei Ansätze \textit{Reactive}, \textit{Corrective} und \textit{Proactive}. Der \textit{Reactive} beugt dem Problem des nicht erhaltenen ACKs vor indem es mehrere ACK Pakete zum Empfänger schickt. Somit ist die Wahrscheinlichkeit höher, dass der Empfänger eines dieser Pakete erhält und damit bestätigen kann. Der Corrective Ansatz versucht den Sender und Empfänger einzubinden, so dass mit fehlerkorrigierenden Codes gearbeitet wird. Die Proactive Lösung geht den aggressivsten Weg und versendet zu 100 Prozent redundant seine Daten. Wie die drei Ansätze im Detail funktionieren, wird in den folgenden Abschnitten behandelt.
 
 \subsection{Reactive}
 Lösungsansatz beschreiben
