--- a/t08_txt.tex
+++ b/t08_txt.tex
@@ -147,7 +147,11 @@ Im refrenzierten Paper wurde die Evaluation mit einer konkreten Implementierung 
 \section{Diskussion der Lösungsansätze}
 Nachdem die Lösungsansätze vorgestellt und evaluiert wurden, kann im nächsten Schritt eine genaue Abwägung der einzelnen Ansätze erfolgen. Der Grundgedanke für eine schnellere Recovery ist eine zusätzliche Redundanz beim Versenden der Informationen. Diese Redundanz hat als Ziel das schnelle Erkennen eines Paketverlustes und darauf aufbauend eine schnelle Retransmission des Paketes vom Sender. Hierbei gibt es verschiedene Aspekte, die man beachten muss. Zum einen sind immer Anpassungen an das ursprüngliche TCP Protokoll notwendig. Die Anpassungen können Sender- und Empfänger-seitig sein. Der Reactive Ansatz beschränkt sich auf Anpassungen auf der Senderseite. Hier werden die zusätzlichen Probe Pakete generiert, die den Empfänger zum Senden von zusätzlichen ACK Paketen zwingen sollen. Die Anpassungen sind sehr gering, so dass die Middleboxen nicht angepasst werden müssen. Dies ist ein großer Vorteil dieses Ansatzes. Weiterhin müssen wenige zusätzliche Informationen versendet werden, was die Leitung entlasten kann. Jedoch wird das Problem, wenn das Datenpaket nicht ankommt nicht angegangen. Es wird lediglich umrundet. Gesetzt der Fall, dass nur die Probe Pakete zum Empfänger ankommen und das Datenpaket nicht. So gibt es keine Chance für den Sender vor dem RTO zu reagieren. Aus diesem Grund ist dieser Ansatz nur effektiv, wenn kein Paket zum Empfänger durchkommt, da dann ein schnelles reagieren des Senders stattfinden kann. \par
 
-Der Corrective Ansatz geht hier einen Schritt weiter. Mithilfe dieser Lösung kann eine erneute Retransmission bei einem kleinen Paketverlust vermieden werden. Dieser Ansatz hat mehr Redundanz als der Proactive Ansatz, jedoch bietet er auch eine zusätzliche Möglichkeit der Recovery auf der Empfängerseite. Ein sehr großer Nachteil ist die Anpassung der Sender und Empfängerseite. Beide Seiten müssen zuerst einen spezielles Verfahren aushandeln, welche Codes sie behandeln wollen und weiterhin muss auf beiden Seiten die Möglichkeit gegeben sein auf die Codes reagieren zu können. 
+Der Corrective Ansatz geht hier einen Schritt weiter. Mithilfe dieser Lösung kann eine erneute Retransmission bei einem kleinen Paketverlust vermieden werden. Dieser Ansatz hat mehr Redundanz als der Proactive Ansatz, jedoch bietet er auch eine zusätzliche Möglichkeit der Recovery auf der Empfängerseite. Ein sehr großer Nachteil ist die Anpassung der Sender und Empfängerseite. Beide Seiten müssen zuerst ein spezielles Verfahren aushandeln, welche Codes sie behandeln wollen und weiterhin muss auf beiden Seiten die Möglichkeit gegeben sein auf die Codes reagieren zu können. Ein großes Hindernis bei der Implementierung sind die Middleboxes. Da auf beiden Seiten (Empfänger und Sender) Anpassungen nötig sind, müssen die Middleboxes ebenfalls angepasst werden. Dies erfordert zusätzlichen Aufwand und gibt eventuell Probleme bei der Standartisierung. Die Vorteile, dass durch eine kleinere Redundanz auf die ursprüngliche Information geschlossen werden kann sind vor allem für unsere kleinen Datenpakete interessant. Weiterhin sind die Vorteile eines schnelleren Erkennens eines Fehlers und im Idealfall eine selbständige Recovery sehr gewichtig. \par
+
+Der aggresivste Ansatz hat seine Stärken ganz klar auf der Empfängerseite. Sobald beide Informationspakete zumindest teilweise angekommen sind, ist eine erneute Retransmission hinfällig. Auch wenn das erste Paket verloren gehen sollte, so hat man immer noch das zweite Paket als Redundanz. Probleme ergeben sich erst dann, wenn beide Pakete verloren gehen. Dann gibt es auf der Empfängerseite keine Chance zu reagieren und das RTO fällt. Es ist der riskanteste Ansatz, allerdings bei einer stabilen Verbindung auch der Erfolgsversprechendste. Voraussetzung für diesen Ansatz ist kein Engpass in der Übertragung der Daten. Da die Leitungen mit diesem Ansatz stärker beansprucht werden als bspw. mit dem reaktiven Ansatz ist eine gute Leitung die Grundvoraussetzung. Die Vorteile dieses Ansatzes liegen ganz klar in der Redundanz. Da die doppelte Menge an Informationen übertragen werden, ist die Wahrscheinlichkeit, dass die Informationen auf der Empfängerseite vollständig ankommen deutlich erhöht. \par
+
+Diese Lösung hat ihre Stärken, wenn Daten auf dem Weg zum Empfänger manipuliert werden und man die Informationen trotzdem gewinnen möchte. Zur Reduzierung der Web Latenz trägt dieser Ansatz bei, indem er versucht eine komplette Retransmission zu verhindern. Im Gegensatz dazu hat der Reactive Ansatz das Ziel einen Paketverlust schnell zu erkennen und eine erneute Übertragung schnell durchzuführen. Der Corrective Weg geht den Mittelweg und versucht beide Möglichkeiten zu vereinen. Hierzu wird weniger Redundanz als bei dem Proactive Ansatz verwendet bei einer gleichzeitig höheren Korrekturmöglichkeit als beim Reactiven Ansatz. 
 \section{Ausblick und Fazit}
 Verweis auf die anderen Lösungsansätze bringen sowie ein endgültiges Fazit der Sache bringen.
 
